# BellkorAlgorithm

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS.md  BlogPost.md  CODE_OF_CONDUCT.md  LICENSE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
Bellkor/: Algorithm.py  __init__.py
Bellkor/Base/: BaseObject.py  Generic.py  __init__.py  base_object.py
Bellkor/Parameters/: Gradients.py  LearningRates.py  Parameters.py  Regularisation.py  RowSettings.py  __init__.py  gradient.py  learning_rate.py  parameter.py  row.py
Bellkor/Utils/: Decorators.py  Exceptions.py  __init__.py  decorator.py  error.py
docs/: Makefile  changelog.md  conf.py  development.md  functions.md  index.md  intro.md
resources/: BellkorP1.odt  Demo.ipynb
tests/test_data/: INIT_PARAMETERS.pickle  LOADING_PICKLE.pickle  __init__.py
tests/unit_tests/: __init__.py  test_algorithm.py  test_base_classes.py  test_parameters.py
