[project]
name = "bellkor"
version = "0.1.0"
description = "An implementation of the “BellKors Pragmatic Chaos”'s final solution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.31.0",
    "notebook>=7.3.2",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
keywords = ["Netflix", "Bellkor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = ["ruff>=0.9.2"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "RUF"]
ignore = ["E501", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["parse_lp"]

[tool.pytest.ini_options]
addopts = "-ra -q -n auto --cov"
testpaths = ["tests"]
